k8s/base.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wtransport-client
  labels:
    app.kubernetes.io/name: wtransport-client
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: wtransport-client
  template:
    metadata:
      labels:
        app.kubernetes.io/name: wtransport-client
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: wtransport-client
          image: docker.io/michalpalkowski/webtransport:latest
          ports:
            - containerPort: 4173
---
apiVersion: v1
kind: Service
metadata:
  name: wtransport-client
spec:
  selector:
    app.kubernetes.io/name: wtransport-client
  ports:
    - name: tcp
      protocol: TCP
      port: 80
      targetPort: 4173
    - name: udp
      protocol: UDP
      port: 80
      targetPort: 4173
