k8s/wtransport.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wtransport-server
  labels:
    app.kubernetes.io/name: wtransport-server
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: wtransport-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: wtransport-server
    spec:
      # imagePullSecrets:
      #   - name: regcred
      containers:
        - name: wtransport-server
          image: docker.io/michalpalkowski/webtransport-server:latest
          # envFrom:
          #   - secretRef:
          #       name: secret
          #   - configMapRef:
          #       name: config
          ports:
            - containerPort: 4433
---
apiVersion: v1
kind: Service
metadata:
  name: wtransport-server
spec:
  selector:
    app.kubernetes.io/name: wtransport-server
  ports:
    - name: tcp
      protocol: TCP
      port: 4433
      targetPort: 4433
    - name: udp
      protocol: UDP
      port: 4433
      targetPort: 4433
